display post data

--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
           </tr>
         </tbody>
       </table>
+      <form action="/cgi-bin/ENV-CGI2/" method="POST">
+        <input type="text" name="test" id="test">
+        <button type="submit">send</button>
+      </form>
     
     <!-- Optional JavaScript; choose one of the two! -->
     <script>
